--- a/CSS/w3schools.css
+++ b/CSS/w3schools.css
@@ -1,23 +1,45 @@
 body{
     width: 100%;
+    height: 100%;
     font-family: 'Segoe UI', Arial,sans-serif;
-}
-
-header{
-    background-color: red;
     
 }
 
-.header_div1{
-    float:left;
+header{
+    display: inline;
+    color: brown;
+    height:auto;
+    width:auto;
+    
+}
+header ul{
+   
+    list-style-type: none;
+    margin: 0;
+    padding: px;
+    overflow: hidden;
+    background-color: #04AA6D;
    
 }
-.header_div2{
-    float: right;
+.li_left{
+    float: left;
+    position: relative;
+    top: 15px;
+    
+    
 }
+.li_right{
+    float:right;
+    position: relative;
+    top: -15px;
+}
+
+
 nav{
     background-color:  #282A35;
     text-align: center;
+    height: 60%;
+    width: auto;
 
     
 }
