--- a/CSS/w3schools.css
+++ b/CSS/w3schools.css
@@ -1,46 +1,51 @@
 body{
-    width: 100%;
-    height: 100%;
+    margin:0;
+    width:auto;
+    height: auto;
     font-family: 'Segoe UI', Arial,sans-serif;
     
 }
-
-header{
-    display: inline;
-    color: brown;
-    height:auto;
-    width:auto;
-    
-}
-header ul{
-   
-    list-style-type: none;
+/**style the nav**/
+nav ul{
+    width: auto;
     margin: 0;
-    padding: px;
-    overflow: hidden;
+    display: flex;
+   justify-content:space-between;
+   flex-wrap: wrap;
+   overflow: hidden;
+   list-style-type: none;
+}
+
+/**styling for links on the left hand side of the nav**/
+nav ul li a.hover{
+    font-weight: 500;
+    font-size:15px;
+    font-family: Verdana, sans-serif;
+    text-decoration: none;
+    color: black;
+    padding-top: 90%;
+    padding-bottom: 100%;
+    margin: 0;
+}
+/**hoverable links on the nav**/
+nav ul li a.hover:hover{
     background-color: #04AA6D;
-   
-}
-.li_left{
-    float: left;
-    position: relative;
-    top: 15px;
-    
+    color: white;
     
 }
-.li_right{
-    float:right;
-    position: relative;
-    top: -15px;
+nav ul li a.end{
+    text-decoration: none;
+    border-radius: 15px;
+    padding-bottom: 5%;
+
 }
 
-
-nav{
+section{
     background-color:  #282A35;
     text-align: center;
     height: 60%;
     width: auto;
-
+    padding: 9%;
     
 }
 .learn-to-code{
@@ -60,7 +65,7 @@ nav{
     padding: 1%;
     border-radius:25px;
     color: black;
-    font-size:large;
+    font-weight: 500;
     font-weight: 700px;
     width:30%;
     text-align: left;
@@ -75,12 +80,66 @@ nav{
 
  
 }
-a:hover{
-    color: #04AA6D;
-   
-}
 .underline{
     color: white;
     font-weight: 700;
     font-size: 20px;
+}
+a.underline:hover{
+    color: #04AA6D;
+}
+aside{
+    height: 40%;
+    background-color: #D9EEE1;
+    margin-top: -19px;
+    padding: 1%;
+}
+aside div.left{
+    flex-direction: column;
+    width: 50%;
+    padding: 5%;
+    display: flex;
+    align-items: center;
+}
+aside div.right{
+    text-align: left;
+    border: 1px;
+    background-color:white;
+    width: 50%;
+    padding: 10%;
+
+}
+aside div ul li{
+    list-style-type: none;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    justify-content:space-between
+}
+aside div ul li a{
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content:space-between;
+    width: 130px;
+   border-radius: 15px;
+    padding: 10px;
+    margin-bottom: 14px;
+    margin-left: -60px;
+}
+.green-border-radius{
+    background-color: #04AA6D;
+    color: white;
+}
+.yellow-border-radius{
+    background-color:#FFF4A3;
+    color:black;
+}
+.black-border{
+    background-color: #282A35;
+    color: white;
+}
+.pink-border{
+    background-color: #FFC0C7;
+    color: black;
 }
