--- a/CSS/w3schools.css
+++ b/CSS/w3schools.css
@@ -3,42 +3,32 @@ body{
     width:auto;
     height: auto;
     font-family: 'Segoe UI', Arial,sans-serif;
-    overflow-x: hidden;
-    
 }
+/**Style for bold headings**/
+
 /**style the nav**/
 nav ul{
     width: auto;
-    margin: 0;
+    margin: 15px;
     display: flex;
-   justify-content:space-between;
-   flex-wrap: wrap;
-   overflow: hidden;
+   justify-content:space-around;
    list-style-type: none;
 }
 
 /**styling for links on the left hand side of the nav**/
-nav ul li a.hover{
+nav ul li a{
     font-weight: 500;
     font-size:15px;
     font-family: Verdana, sans-serif;
     text-decoration: none;
     color: black;
-    padding-top: 90%;
-    padding-bottom: 100%;
-    margin: 0;
+    padding:33%;  
+    padding-bottom:22%;
 }
 /**hoverable links on the nav**/
 nav ul li a.hover:hover{
     background-color: #04AA6D;
     color: white;
-    
-}
-nav ul li a.end{
-    text-decoration: none;
-    border-radius: 15px;
-    padding-bottom: 5%;
-
 }
 
 section{
@@ -49,17 +39,16 @@ section{
     padding: 9%;
     
 }
-.learn-to-code{
+.headings{
     font-weight: 700;
-    font-size: 50px;
-    color: white;
-
+    font-size: 70px;
+    color: black;
 }
 .with-the{
   color:#FFC0C7;
   font-weight: 700;
   font-size: 25px;
-
+  margin-top: -35px;
 }
   
 .container{
@@ -87,9 +76,11 @@ section{
 a.underline:hover{
     color: #04AA6D;
 }
+/**set background color for the div containing the aside**/
 .div-aside{
     background-color: #D9EEE1;
 }
+/**width for the elements in the aside and center the elements. flex direction to display them horizontally**/
  div aside{
     height: 20%;
     width: 80%;
@@ -141,41 +132,40 @@ div aside div xmp{
     margin:auto;
     width:90%;
 }
-.green-border-radius{
-    background-color: #04AA6D;
-    color: white;
+.border-radius{
     border-radius: 25px;
     padding: 10px;
     font-size: 18px;
     font-weight: 500;
     text-align: center;
+}
+.light-green-border{
+    background-color: #D9EEE1;
+    color:black;
+}
+.purple-border{
+    color:white;
+    background-color:#9763f6;
+}
+.green-border-radius{
+    background-color: #04AA6D;
+    color: white;
 }
 .yellow-border-radius{
     background-color:#FFF4A3;
     color:black;
-    border-radius: 25px;
-    padding: 10px;
-    font-size: 18px;
-    font-weight: 500;
-    text-align: center;
 }
 .black-border{
     background-color: #282A35;
     color: white;
-    border-radius: 25px;
-    padding:10px;
-    font-size: 17px;
-    font-weight: 500;
-    text-align: center;
 }
 .pink-border{
     background-color: #FFC0C7;
-    border-radius: 25px;
     color: black;
-    font-size: 18px;
-    font-weight: 500;
-    padding:10px;
-    text-align: center;
+}
+.white-border{
+    background-color: white;
+    color: black;
 }
 .div-article{
     background-color:#FFF4A3;
