--- a/CSS/w3schools.css
+++ b/CSS/w3schools.css
@@ -4,7 +4,47 @@ body{
     height: auto;
     font-family: 'Segoe UI', Arial,sans-serif;
 }
-/**Style for bold headings**/
+/**Style for links with border radius**/
+.light-green-border{
+    background-color: #D9EEE1;
+    color:black;
+}
+.purple-border{
+    color:white;
+    background-color:#9763f6;
+}
+.green-border-radius{
+    background-color: #04AA6D;
+    color: white;
+}
+.yellow-border-radius{
+    background-color:#FFF4A3;
+    color:black;
+}
+.black-border{
+    background-color: #282A35;
+    color: white;
+}
+.pink-border{
+    background-color: #FFC0C7;
+    color: black;
+}
+.white-border{
+    background-color: white;
+    color: black;
+}
+.headings{
+    font-weight: 700;
+    font-size: 70px;
+    color: black;
+}
+.heading2{
+    width:max-content;
+    margin-top:-49px; 
+    font-weight: 140;
+    font-size: 19px;
+}
+
 
 /**style the nav**/
 nav ul{
@@ -15,7 +55,7 @@ nav ul{
    list-style-type: none;
 }
 
-/**styling for links on the left hand side of the nav**/
+/**styling for links on the nav**/
 nav ul li a{
     font-weight: 500;
     font-size:15px;
@@ -34,15 +74,8 @@ nav ul li a.hover:hover{
 section{
     background-color:  #282A35;
     text-align: center;
-    height: 60%;
     width: auto;
-    padding: 9%;
-    
-}
-.headings{
-    font-weight: 700;
-    font-size: 70px;
-    color: black;
+    padding: 9%;   
 }
 .with-the{
   color:#FFC0C7;
@@ -81,8 +114,7 @@ a.underline:hover{
     background-color: #D9EEE1;
 }
 /**width for the elements in the aside and center the elements. flex direction to display them horizontally**/
- div aside{
-    height: 20%;
+ .div-outer{
     width: 80%;
     margin: auto;
     display: flex;
@@ -91,7 +123,8 @@ a.underline:hover{
     padding: 0;
     align-items: center;
 }
-div aside ul li{
+.div-ul-li{
+    text-align: center;
     list-style-type: none;
     align-items: center;
     display: flex;
@@ -100,14 +133,13 @@ div aside ul li{
     
 }
 div aside ul li a{
-    text-align: center;
     display: flex;
     flex-direction: column;
     justify-content:space-between;
     margin-bottom: 14px;
 
 }
-div aside div{
+.div-inner{
     position: relative;
     left: 6%;
     text-align: left;
@@ -139,93 +171,26 @@ div aside div xmp{
     font-weight: 500;
     text-align: center;
 }
-.light-green-border{
-    background-color: #D9EEE1;
-    color:black;
-}
-.purple-border{
-    color:white;
-    background-color:#9763f6;
-}
-.green-border-radius{
-    background-color: #04AA6D;
-    color: white;
-}
-.yellow-border-radius{
-    background-color:#FFF4A3;
-    color:black;
-}
-.black-border{
-    background-color: #282A35;
-    color: white;
-}
-.pink-border{
-    background-color: #FFC0C7;
-    color: black;
-}
-.white-border{
-    background-color: white;
-    color: black;
-}
 .div-article{
     background-color:#FFF4A3;
 }
-div article{
-    width: 80%;
-    margin: auto;
-    justify-content: center;
-    padding: 0px;
+div article ul li a{
     display: flex;
-    flex-direction: row;
-}
-div article ul{
-    width: 40%;
-    display: block;
-    justify-content: left;
-    list-style-type: none;
-    text-align: center;
-}
-div article ul li{
-    margin: 5%;
-    width: 30%;
-}
-div article div{
-    background-color:#E7E9EB;
-    width:20%;
-    text-align: left;
-    border: 1px;
-    margin:10%;
-    border-radius:5px;
-
+    flex-direction: column;
+    justify-content:space-between;
+    margin-bottom: 14px;
 }
 div article div xmp{
-    background-color: white;
-    margin: 7%;
-    padding: 20%;
-}
-div article div{
-    position: relative;
-    left: 6%;
-    text-align: left;
-    border: 1px;
-    width: 20%;
-    padding: 10%;
-    background-color:#E7E9EB;
-    color: black;
-    margin:10%;
-    border-radius:5px;
-    
-}
-div article div xmp{
-    overflow-wrap: normal;
     background-color: white;
     color: black;
     position: absolute;
-    border-left-color: #04AA6D;
-    bottom: 15%;
-    left: 15px;
-    right: 15px;
-    line-height: 8px;
+    bottom: 25%;
+    left: 5px;
+    right: 5px;
+    line-height: 25px;
     margin:auto;
     width:90%;
+}
+.div-header{
+    background-color: #282A35;
 }
