--- a/CSS/w3schools.css
+++ b/CSS/w3schools.css
@@ -218,7 +218,7 @@ a.underline:hover{
     width: 150px;
     outline: none;
     border: none;
-    margin: 30px 0 10px;
+    margin: 30px 25px 10px;
 }
 pre{
     border-left: 4px solid #04AA6D;
@@ -235,23 +235,129 @@ pre{
     display: flex;
     align-items: center;
     flex-wrap: wrap;
+    flex-basis: 100%;
     justify-content: space-around;
     padding: 70px 0 0 0;
 }
-div.container>div{
+div.general{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    border: 1px solid white;
+    align-items: center;
+}
+div.container>div.general>div.big{
     width:40%;
-    margin:30px 15px;
     line-height: 40px;
     border-radius:7px;
+    border: 1px solid red;
+    margin:30px
 }
-div.container>div>ul>li{
+div.container>div.general>div.big>ul>li{
     list-style-type: none;
     text-align: center;
     display: flex;
     justify-content: space-around;
 }
-div.container>div>ul>li>a{
+div.container>div.general>div.big>ul>li>a{
     padding: 1px 40px;
     margin-bottom: 25px;
+}
+div.container>div.general>div.short{
+    width:40%;
+    line-height: 140px;
+    border-radius:5px;
+    text-align: center;
+    margin:30px;
+    border: 1px solid white;
+}
+div.container>div.general>div.shorter>a{
+    padding: 1px 40px;
+    margin-bottom: 25px;
+    font-size: 25px;
+    font-weight: 500px;
+}
+div.container>div.general>div.shorter{
+    width:40%;
+    line-height: 120px;
+    border-radius:5px;
+    text-align: center;
+    margin:30px;
+    border: 1px solid white;
+}
+div.container>div.general>div.short>a{
+    padding: 1px 40px;
+    margin-bottom: 25px;
+    font-size: 25px;
+    font-weight: 500px;
+}
+
+div.container>div.general>div.small{
+    display: flex;
+    flex-direction: row;
+    flex-basis: 90%;
+    line-height: 60px;
+    border-radius:5px;
+    text-align: center;
+    border: 1px solid  white;
+    align-items: center;
+    justify-content: space-evenly;
+    
+}
+div.container>div.general>div.small>div.left{
+    display: flex;
+    width:100%;
+    line-height: 120px;
+    border-radius:5px;
+    text-align: center;
     border: 1px solid red;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+
+}
+div.container>div.general>div.small>div.right{
+    flex-wrap: wrap;
+    display: flex;
+    width:100%;
+    line-height: 120px;
+    border-radius:5px;
+    text-align: center;
+    border: 1px solid white;
+}
+div.container>div.general>div.small>div.left>div{
+    width:280px;
+    margin: 20px 20px 20px 32px;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    line-height: 90px;
+    text-align: center;
+}
+div.container>div.general>div.small>div.left>div>a{
+    display: flex;
+    align-items: center;
+    font-size: 25px;
+    font-weight: 500px;
+    margin-bottom: 25px;
+    text-align: center;
+    justify-content: center;
+}
+div.container>div.general>div.small>div.right>div{
+    width:280px;
+    margin: 20px 20px 20px 32px;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    line-height: 90px;
+    text-align: center;
+}
+div.container>div.general>div.small>div.right>div>a{
+    display: flex;
+    align-items: center;
+    font-size: 25px;
+    font-weight: 500px;
+    margin-bottom: 25px;
+    text-align: center;
+    justify-content: center;
 }
